--- a/bootstrap307ADMIN.html
+++ b/bootstrap307ADMIN.html
@@ -46,14 +46,14 @@
     </nav>
     <hr />
 
-<!-- Shaadow Box for text // ASK HOW TO MAKE MULTIPLE OF THESE ACROSS -->
+<!-- Blockquote for text // ASK HOW TO MAKE MULTIPLE OF THESE ACROSS -->
 
 <blockquote>
     
     <center><h1>Admin Center</h1></center>
 <br>
 <br>
-<!-- table 1 - Questions about styling being code - move to css? -->
+<!-- Blockquote for text - Questions about styling being code - move to css? -->
 
 <blockquote>
     <!DOCTYPE html>
@@ -68,6 +68,7 @@ table, th, td {
 </head>
 <body>
 
+  <div id="blockquote1">
 <h2>TOP ADMIN</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
@@ -96,7 +97,29 @@ table, th, td {
     </center>
 </div>
 
-<!-- shadow box -->
+<!-- Blockquote 3 -->
+
+<Blockquote>
+  <div class="blockquote1">
+    <center><img src="./assets/FireShot Capture 001 -  - BAR.png" alt="BAR"></center>
+  </div>
+</Blockquote> 
+
+
+    <div class="blockquote1>
+      <center><img src="./assets/FireShot Capture 002 -  - .png" alt="BAR"></center>
+    </div>
+
+    <div id="blockquote1"></div>
+</blockquote>
+        <center><img src="./assets/FireShot Capture 003 -  - .png" alt="BAR"></center>
+
+        <!--  LIKE COLOR LINE  -->
+        <div id="blockquote1">
+          <blockquote>
+          </blockquote>
+        </div>
+      
 
 </body>
 
