added image - complete

--- a/bootstrap307ADMIN.html
+++ b/bootstrap307ADMIN.html
@@ -112,7 +112,8 @@ table, th, td {
 
     <div id="blockquote1"></div>
 </blockquote>
-        <center><img src="./assets/FireShot Capture 003 -  - .png" alt="BAR"></center>
+        <center><img src="./assets/FireShot Capture 003 -  - .png" alt="BAR">
+          <img src="./assets/FireShot Capture 011 -  CIRCLE.png" alt="Circle"></center>
 
         <!--  LIKE COLOR LINE  -->
         <div id="blockquote1">
